# mcap-ros2idl-support

./: .eslintrc.cjs  .gitignore  .gitmodules  DESIGN.md  MANIFEST.in  README.md  README_PYTHON.md  cdr_reader.py  deploy.sh  fast_cdr_reader_ideas.txt  generate_mcap.py  idl_loader.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  ros2_mcap_reader.py  tsconfig.json
.github/workflows/: ci.yml  python-tests.yml  rust-tests.yml
docs/: Doxyfile  example.idl
docs/html/: annotated.html  classes.html  example_8idl.html  example_8idl_source.html  files.html  functions.html  functions_vars.html  graph_legend.html  index.html  structExample-members.html  structExample.html
docs/html/search/: all_0.js  all_1.js  classes_0.js  files_0.js  searchdata.js
examples/: cli.py  write_cdr_mcap.py
mcap_ros2idl_support/: __init__.py  cdr_reader.py  cli.py  decode_factory.py  encode_factory.py  idl_loader.py  idl_loader_py.py  node_cli.py
mcap_ros2idl_support/omgidl_parser/: parse.py
mcap_ros2idl_support/rosmsg2_serialization/: __init__.py  message_reader.py  message_writer.py
mcap_schema_cli/: __init__.py  cdr_reader.py  cli.py  idl_loader.py  node_cli.py
nodejs/: README.md  package-lock.json  package.json
nodejs/src/: index.ts  parseSchemas.ts  readSchemas.ts
nodejs/src/__tests__/: cli.test.ts  readSchemas.test.ts
python_omgidl/omgidl_serialization/: message_reader.py  message_writer.py
rust/mcap-rs/: Cargo.toml  README.md  pyproject.toml
rust/mcap-rs/src/: cdr.rs  lib.rs  main.rs
src/: index.ts  parseSchemas.ts
src/__tests__/: cli.test.ts  parseSchemas.test.ts
tests/: generate_mcap.js  generate_mcap.py  test_cdr_reader.py  test_cli.py  test_decode_factory.py  test_encode_factory.py  test_end_to_end.py  test_generator_e2e.py  test_idl_loader.py  test_mcap_rs.py  test_message_reader.py  test_message_serialization.py
tests/cdr/: test_reader.py  test_size_calculator.py  test_writer.py
tests/omgidl/: test_deferred_constants.py  test_message_definition.py
tests/python_ros/: test_MessageReader.py  test_md5.py  test_parse_ros1.py  test_parse_ros2.py
tests/rosmsg/: test_stringify.py
tests/rosmsg2_serialization/: test_message_reader.py  test_message_writer.py
tests/rostime/: test_rostime.py
