[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcap-ros2idl-support"
version = "0.0.2"
description = "A Python library to read and parse ROS 2 MCAP bag files without a ROS 2 runtime."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "dskkato" }]
dependencies = [
    "lark>=1.2.0",
    "mcap>=1.3.0",
    "rosmsg @ git+https://github.com/dskkato/ros-typescript.git@02c44dc1dfda6ebb59aea523e194d0d604c584b9",
    "omgidl @ git+https://github.com/dskkato/omgidl.git@adc0d0971d45feea155d3177815e0cdf92215779",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "maturin>=1.5,<2", "build"]


[tool.black]
line-length = 88

[tool.isort]
profile = "black"
