[package]
name = "mcap-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "mcap_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
mcap = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
byteorder = "1"
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py310"] }

[dev-dependencies]
tempfile = "3"
